added detail to html

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
    <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>!-- Your Site Name Here --!</title>
+      <title> The Frog Box</title>
       <link href="02.css" rel="stylesheet" type="text/css" id="left-sidebar-css" media="all">
       <link rel="icon" type="image/png" href="https://neothemes.neocities.org/images/favicon.gif" />
    </head>
    <body class="scroll">
       <div id="container">
          <div id="header">
-            <h1 class="title">Your Site Name</h1>
+            <h1 class="title">The Frog Box</h1>
          </div>
          <div class="navbar">
             <ul>
