--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title> The Frog Box</title>
-      <link href="02.css" rel="stylesheet" type="text/css" id="left-sidebar-css" media="all">
+      <link href="style.css" rel="stylesheet" type="text/css" id="left-sidebar-css" media="all">
       <link rel="icon" type="image/png" href="https://neothemes.neocities.org/images/favicon.gif" />
    </head>
    <body class="scroll">
