Updated site home page

--- a/index.html
+++ b/index.html
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
 <html>
-<head>
-   <title>The Frog Box</title>
-   <link rel="stylesheet" type="text/css" href="style.css">
-</head>
-<body>
-   <div class="container">
-      <div class="header">
-         <h2>The Frog Box</h2>
-      </div>
-      <div class="content">
-         <p>Welcome to the </p>
-         <p></p>
-         <p></p>
-      </div>
-   </div>
 
-</body>
-<footer>
-   <div class="footer">
-      <p>Footer</p>
-   </div>
-</footer>
+   <head>
+      <title>The Frog Box</title>
+      <link rel="stylesheet" type="text/css" href="style.css">
+   </head>
+   <header>
+      
+   </header>
+
+   <body>
+      <title>
+         <h2>The Frog Box</h2>
+      </title>
+      <main>
+         <p>Welcome to the frog box</p>
+         <hr />
+         <h2>under construction</h2>
+         <img href="#">Image Here</img>
+      </main>
+
+   </body>
+   <footer>
+      <p>Frog Pond LLC</p>
+   </footer>
+
 </html>
