added some css to navbar and added semantic html

--- a/index.html
+++ b/index.html
@@ -4,18 +4,48 @@
    <head>
       <title>The Frog Box</title>
       <link rel="stylesheet" type="text/css" href="style.css">
+      <link rel="stylesheet" type="text/css" href="classes.css">
+
+      <title id="page_title">
+         The Frog Box
+      </title>
+
    </head>
-   <header>
-      
-   </header>
+   
+   
 
    <body>
-      <title>
-         <h2>The Frog Box</h2>
-      </title>
+      <header id="page_header">
+         <navbar id="navbar_top">
+            <ul id="navbar_list">
+               <li id="navbar_item">
+                  <a href="#">
+                     <h3>
+                        About
+                     </h3>
+                  </a>
+               </li>
+               <li id="navbar_item">
+                  <a href="#">
+                     <h3>
+                        Favorite Things
+                     </h3>
+                  </a>
+               </li>
+               <li id="navbar_item">
+                  <a href="#">
+                     <h3>
+                        Personal Projecs
+                     </h3>
+                  </a>
+               </li>
+            </ul>
+         </navbar>
+         <hr />
+      </header>
       <main>
          <p>Welcome to the frog box</p>
-         <hr />
+
          <h2>under construction</h2>
          <img href="#">Image Here</img>
       </main>
