commiting my updates

--- a/index.html
+++ b/index.html
@@ -1,58 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
    <head>
       <title>The Frog Box</title>
-      <link rel="stylesheet" type="text/css" href="style.css">
-      <link rel="stylesheet" type="text/css" href="classes.css">
-
-      <title id="page_title">
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link rel="stylesheet" type="text/css" href="css/style.css">
+      <title>
          The Frog Box
       </title>
-
    </head>
-   
-   
 
    <body>
-      <header id="page_header">
-         <navbar id="navbar_top">
-            <ul id="navbar_list">
-               <li id="navbar_item">
-                  <a href="#">
-                     <h3>
-                        About
-                     </h3>
-                  </a>
-               </li>
-               <li id="navbar_item">
-                  <a href="#">
-                     <h3>
-                        Favorite Things
-                     </h3>
-                  </a>
-               </li>
-               <li id="navbar_item">
-                  <a href="#">
-                     <h3>
-                        Personal Projecs
-                     </h3>
-                  </a>
-               </li>
-            </ul>
-         </navbar>
-         <hr />
-      </header>
-      <main>
+   <li><strong>Frog Box</strong></li>
+         <ul>
+            <li><a href="#" class="contrast">About</a></li>
+            <li><a href="#" class="contrast">Services</a></li>
+            <li><a href="#"   class="contrast">Products</a></li>
+         </ul>
+            <hr />
+         </header>
          <p>Welcome to the frog box</p>
-
          <h2>under construction</h2>
          <img href="#">Image Here</img>
+         <footer>
+            <p>Frog Pond LLC</p>
+         </footer>
       </main>
-
    </body>
-   <footer>
-      <p>Frog Pond LLC</p>
-   </footer>
-
 </html>
