--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
          </header>
          <p>Welcome to the frog box</p>
          <h2>under construction</h2>
-         <img href="#">Image Here</img>
+         <img src="Underconstruction.gif"></img>
          <footer>
             <p>Frog Pond LLC</p>
          </footer>
