--- a/index.html
+++ b/index.html
@@ -12,18 +12,21 @@
    </head>
 
    <body>
+      <header>
    <li><strong>Frog Box</strong></li>
          <ul>
             <li><a href="#" class="contrast">About</a></li>
             <li><a href="#" class="contrast">Services</a></li>
-            <li><a href="#"   class="contrast">Products</a></li>
+            <li><a href="#" class="contrast">Products</a></li>
          </ul>
             <hr />
          </header>
+      <section>
          <p>Welcome to the frog box</p>
          <h2>under construction</h2>
          <img src="Underconstruction.gif"></img>
-         <footer>
+      </section>
+      <footer>
             <p>Frog Pond LLC</p>
          </footer>
       </main>
